# HR-Pulse-Azure-MLOps-

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci-pipeline.yml
app/: main.py
backend/: pyproject.toml
backend/docker/: docker-compose.monitoring.yml
backend/infra/: main.tf
backend/k8s/: cronjob-pipeline.yaml
backend/monitoring/prometheus/: prometheus.yml
backend/notebooks/: 01_eda_preprocessing.ipynb
backend/reports/evidently/: evidently_report.py
backend/scripts/: read_db.py
backend/src/: config.py  embeddings.py  extract_skills.py  test_ai.py  train.py
docker/: Dockerfile.app
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
infra/: main.tf
notebooks/: 01_eda_preprocessing.ipynb  02_embeddings_chroma.ipynb  03_training_eval.ipynb
scripts/: ingest_jobs.py
src/: config.py  drift_monitor.py  embeddings.py  main.py  predict.py  preprocessing.py  test_ai.py  train.py
