[project]
name = "hr-pulse-azure-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-textanalytics>=5.3.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "matplotlib-inline>=0.2.1",
    "nltk>=3.9.2",
    "pandas>=3.0.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
]
